fixed bugs with postgres and added getting info about car totaly
